m changes and added images on blog page

--- a/blog.html
+++ b/blog.html
@@ -91,11 +91,59 @@
 
         <!-- Blog Card -->
         <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
+          <img src="https://images.unsplash.com/photo-1523050854058-8df90110c9f1?" class="w-full h-56 object-cover" />
 
           <div class="p-6">
             <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
               <span>📅 Dec 5, 2024</span>
+              <span>👤 Admin</span>
+            </div>
+
+            <h3 class="text-[23px] font-semibold text-[#1E3A5F] mb-3">
+              Top 10 Tips for Studying Abroad in 2025
+            </h3>
+
+            <p class="text-gray-600 mb-4">
+              Planning to study abroad? Here are essential tips to make your international education journey successful..
+            </p>
+
+            <a href="#" class="text-red-500 font-semibold hover:underline">
+              Read More →
+            </a>
+          </div>
+        </div>
+
+        <!-- Blog Card -->
+        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1434030216411-0b793f4b4173?" class="w-full h-56 object-cover" />
+
+          <div class="p-6">
+            <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
+              <span>📅 Dec 3, 2024</span>
+              <span>👤 Admin</span>
+            </div>
+
+            <h3 class="text-[23px] font-semibold text-[#1E3A5F] mb-3">
+              How to Prepare for IELTS: A Complete Guide
+            </h3>
+
+            <p class="text-gray-600 mb-4">
+              IELTS is crucial for studying abroad. Learn effective strategies
+              to achieve your target band score...
+            </p>
+
+            <a href="#" class="text-red-500 font-semibold hover:underline">
+              Read More →
+            </a>
+          </div>
+        </div>
+
+        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
+          <img src="https://images.unsplash.com/photo-1523482580672-f109ba8cb9be?" class="w-full h-56 object-cover" />
+
+          <div class="p-6">
+            <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
+              <span>📅 Dec 1, 2024</span>
               <span>👤 Admin</span>
             </div>
 
@@ -113,23 +161,21 @@
           </div>
         </div>
 
-        <!-- Blog Card -->
         <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
+          <img src="https://images.unsplash.com/photo-1562774053-701939374585?" class="w-full h-56 object-cover" />
 
           <div class="p-6">
             <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
-              <span>📅 Dec 3, 2024</span>
+              <span>📅 Nov 28, 2024</span>
               <span>👤 Admin</span>
             </div>
 
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              How to Prepare for IELTS: A Complete Guide
+            <h3 class="text-[23px] font-semibold text-[#1E3A5F] mb-3">
+             Scholarship opportunities for Nepali Students
             </h3>
 
             <p class="text-gray-600 mb-4">
-              IELTS is crucial for studying abroad. Learn effective strategies
-              to achieve your target band score...
+              Learn about various scholarship opportunities available for Nepali students studying abroad...
             </p>
 
             <a href="#" class="text-red-500 font-semibold hover:underline">
@@ -139,21 +185,20 @@
         </div>
 
         <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
+          <img src="https://images.unsplash.com/photo-1517486808906-6ca8b3f04846?" class="w-full h-56 object-cover" />
 
           <div class="p-6">
             <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
-              <span>📅 Dec 3, 2024</span>
+              <span>📅 Nov 25, 2024</span>
               <span>👤 Admin</span>
             </div>
 
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              How to Prepare for IELTS: A Complete Guide
+            <h3 class="text-[23px] font-semibold text-[#1E3A5F] mb-3">
+              Student Life in the UK : What to Expect
             </h3>
 
             <p class="text-gray-600 mb-4">
-              IELTS is crucial for studying abroad. Learn effective strategies
-              to achieve your target band score...
+              A comprehensive guide to student life in the United Kingdom for international students...
             </p>
 
             <a href="#" class="text-red-500 font-semibold hover:underline">
@@ -163,69 +208,20 @@
         </div>
 
         <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
+          <img src="https://images.unsplash.com/photo-1493976040374-85c8e12f0c0e?" class="w-full h-56 object-cover" />
 
           <div class="p-6">
             <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
-              <span>📅 Dec 3, 2024</span>
+              <span>📅 Nov 22, 2024</span>
               <span>👤 Admin</span>
             </div>
 
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              How to Prepare for IELTS: A Complete Guide
+            <h3 class="text-[23px] font-semibold text-[#1E3A5F] mb-3">
+              Study in Japan: Language and Culture Guide
             </h3>
 
             <p class="text-gray-600 mb-4">
-              IELTS is crucial for studying abroad. Learn effective strategies
-              to achieve your target band score...
-            </p>
-
-            <a href="#" class="text-red-500 font-semibold hover:underline">
-              Read More →
-            </a>
-          </div>
-        </div>
-
-        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
-
-          <div class="p-6">
-            <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
-              <span>📅 Dec 3, 2024</span>
-              <span>👤 Admin</span>
-            </div>
-
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              How to Prepare for IELTS: A Complete Guide
-            </h3>
-
-            <p class="text-gray-600 mb-4">
-              IELTS is crucial for studying abroad. Learn effective strategies
-              to achieve your target band score...
-            </p>
-
-            <a href="#" class="text-red-500 font-semibold hover:underline">
-              Read More →
-            </a>
-          </div>
-        </div>
-
-        <div class="bg-white rounded-2xl shadow hover:shadow-lg transition overflow-hidden">
-          <img src="https://via.placeholder.com/600x400" class="w-full h-56 object-cover" />
-
-          <div class="p-6">
-            <div class="flex items-center gap-4 text-sm text-gray-500 mb-3">
-              <span>📅 Dec 3, 2024</span>
-              <span>👤 Admin</span>
-            </div>
-
-            <h3 class="text-xl font-semibold text-gray-900 mb-3">
-              How to Prepare for IELTS: A Complete Guide
-            </h3>
-
-            <p class="text-gray-600 mb-4">
-              IELTS is crucial for studying abroad. Learn effective strategies
-              to achieve your target band score...
+              Everything you need to know about studying in Japan, from language requirements to cultural tips...
             </p>
 
             <a href="#" class="text-red-500 font-semibold hover:underline">
@@ -295,7 +291,7 @@
         <div class=" w-full bg-[#1A1A2E]">
 
             <div
-                class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4  sm:gap-[20px] md:gap-[30px] lg-gap[40px] gap-[60px] w-[85%] mx-auto pt-[60px]">
+                class="grid sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4  sm:gap-[20px] md:gap-[30px] lg-gap[40px] gap-[60px] w-[85%] mx-auto pt-[50px]">
                 <div>
                     <h2 class="text-white text-[25px] text-start pb-2 font-semibold">About ALVN</h2>
                     <p class="text-[#C4C4C4] text-md text-start">ALVN Education Consultancy is your trusted partner for
