--- a/blog.html
+++ b/blog.html
@@ -246,30 +246,30 @@
 
         <!-- Study Destinations -->
         <div class="bg-white p-6 rounded-2xl shadow">
-          <h3 class="text-xl font-semibold text-gray-900 mb-4 border-b pb-2">
+          <h3 class="text-xl font-semibold text-[#1E3A5F] mb-4 border-b pb-2">
             Study Destinations
           </h3>
 
           <ul class="space-y-3">
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg hover:bg-gray-200 cursor-pointer">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › Australia
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › United Kingdom
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › USA
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › Canada
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › Japan
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › South Korea
             </li>
-            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg">
+            <li class="flex items-center gap-3 p-3 bg-gray-100 rounded-lg text-[17px] font-semibold hover:bg-[#1E3A5F] hover:text-white cursor-pointer">
               › Finland
             </li>
           </ul>
