--- a/services.html
+++ b/services.html
@@ -92,58 +92,76 @@
         </p>
     </div>
 
-    <div class="grid grid-cols-3 gap-[32px] p-[40px] pt-[80px] text-center px-[115px] pb-[110px]" data-aos="fade-up">
+    <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-[32px] p-[40px] pt-[80px] text-center px-[115px] pb-[110px]" data-aos="fade-up">
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] w-full py-[20px] hover:border-1 hover:border-red-300 group">
-            <i class="fa-solid fa-graduation-cap text-[50px] text-white py-[20px] group-hover:text-[orangered] group-hover:rotate-y-[180deg] duration-300 pt-[25px] bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-graduation-cap text-[50px] text-white py-[20px] group-hover:text-[orangered] group-hover:rotate-y-[180deg] duration-300 pt-[25px] "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-semibold">Career Counselling</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Our experienced counselors provide personalized guidance to help you identify the right course, university, and country based on your academic background, interests, and career aspirations. We assess your profile and recommend options that align with your goals and budget.</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 group">
-            <i class="fa-regular fa-file-lines text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-regular fa-file-lines text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Documentation Support</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">We assist you with all necessary documentation including Statement of Purpose (SOP), Letters of Recommendation (LOR), CV/Resume preparation, academic transcripts verification, and other application materials required by universities and visa offices.</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1  hover:border-red-300 group">
-            <i class="fa-solid fa-book-open text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-book-open text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Test Preparation</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">We offer comprehensive coaching for various standardized tests including IELTS, PTE, TOEFL, GRE, GMAT, SAT, and language proficiency tests for countries like Japan, Korea, and Germany. Our experienced trainers ensure you achieve your target scores.</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1  hover:border-red-300 group">
-            <i class="fa-brands fa-cc-visa text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-brands fa-cc-visa text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Visa Guidance</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Our visa experts guide you through the entire visa application process. We help prepare your documentation, conduct mock interviews, and provide tips to increase your chances of visa approval. Our high success rate speaks to our expertise</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 items-center group">
-            <i class="fa-solid fa-building-columns text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-building-columns text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">University Admission</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Before you leave for your destination country, we provide comprehensive pre-departure briefings covering essential information about accommodation, banking, local culture, weather, transportation, and tips for adjusting to life abroad</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 group ">
-            <i class="fa-solid fa-plane-departure text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-plane-departure text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Pre-departure Briefing</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">With our strong partnerships with universities worldwide, we facilitate the admission process, helping you apply to multiple institutions, track applications, and secure admission offers from your preferred universities.</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1  hover:border-red-300 group">
-            <i class="fa-solid fa-flag text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-flag text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300"></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Scholarship Assistance</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]"> We help identify and apply for scholarships,grants,and financial aid opportunities to make your education more affordable. Our team keeps track of various scholarship deadlines and eligibility requirements.</p>
         </div>
 
         <div
             class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 items-center group">
-            <i class="fa-solid fa-house text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-solid fa-house text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Accommodation Support</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">We assist students in finding suitable accommodation options including university dormitories, shared apartments, and homestays in their destination country, ensuring a smooth transition to life abroad.</p>
         </div>
 
         <div class="shadow-lg rounded-xl pt-[15px] pb-[8px] h-[380px] py-[20px] w-full hover:border-1 hover:border-red-300 group ">
-            <i class="fa-regular fa-headphones text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 bg-[#1E3A5F] h-[80px] w-[80px] flex items-center rounded-full"></i>
+            <div class="h-[80px] w-[80px] mx-auto bg-[#1E3A5F] text-white rounded-full flex items-center justify-center">
+            <i class="fa-regular fa-headphones text-[50px] text-white py-[20px] hover:text-[orangered] pt-[25px] group-hover:text-red-300 group-hover:rotate-y-[180deg] duration-300 "></i>
+            </div>
             <h2 class="text-[#1E3A5F] text-[25px] pt-5 font-bold">Post-Arrival Support</h2>
             <p class="text-[#6C757D] w-[85%] mx-auto pt-[20px]">Our support doesn't end when you reach your destination. We provide continued assistance with settling in, opening bank accounts, getting SIM cards, and addressing any challenges you may face in your new country.</p>
         </div>
