--- a/aboutus.html
+++ b/aboutus.html
@@ -85,7 +85,7 @@
         </div>
     </div>
 
-    <div class="grid grid-cols-2 shadow-lg  h-[600px] pb-[80px] gap-6">
+    <div class="grid md:grid-cols-1 lg:grid-cols-2 shadow-lg pb-[80px] gap-6">
         <div class="pt-[75px] pl-[130px] ">
             <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?w=800" alt="" class="h-[420px] rounded-xl">
         </div>
@@ -102,13 +102,13 @@
         </div>
     </div>
 
-    <div class="grid grid-cols-2 pt-[80px] pb-[110px] pl-[150px] gap-1 text-center">
-        <div class="shadow-lg rounded-xl h-[360px] w-[80%] py-[20px]">
+    <div class="grid md:grid-cols-1 lg:grid-cols-2 pt-[80px] pb-[110px] pl-[150px] gap-1 text-center">
+        <div class="shadow-lg rounded-xl  w-[80%] py-[20px]">
             <i class="fa-solid fa-bullseye text-[50px] text-red-500 py-[8px]"></i>
             <h2 class="text-[#1E3A5F] text-[30px] pt-3 font-semibold">Our Mission</h2>
             <p class="text-[#6C757D] text-[17px] pt-[15px] px-8">To empower Nepali students with quality education abroad by providing comprehensive counseling, transparent guidance, and unwavering support throughout their educational journey. We strive to make international education accessible and achievable for every aspiring student.</p>
         </div>
-        <div class="shadow-lg rounded-xl h-[360px] w-[80%] py-[20px]">
+        <div class="shadow-lg rounded-xl  w-[80%] py-[20px]">
             <i class="fa-solid fa-eye text-[50px] text-red-500 py-[8px]"></i>
             <h2 class="text-[#1E3A5F] text-[30px] pt-3 font-semibold">Our Vision</h2>
             <p class="text-[#6C757D] text-[17px] pt-[15px] px-8">To become Nepal's most trusted and preferred education consultancy, recognized for our commitment to student success, ethical practices, and contribution to developing globally competitive Nepali professionals who make a positive impact worldwide.</p>
@@ -116,7 +116,7 @@
     </div>
     </div>
 
-    <div class="h-[610px] w-full bg-[#005A9C]">
+    <div class=" w-full bg-[#005A9C]">
         <div class="text-center">
             <h1 class=" text-white text-[45px] text-b pt-[90px] font-semibold">Why Choose ALVN?</h1>
             <p class="text-[white] text-[20px] pt-[10px] ">Your success is our priority
@@ -124,7 +124,7 @@
         </div>
 
         
-        <div class="grid grid-cols-4 px-[150px] p-[100px] w-[100%] mx-auto gap-[10px] text-center" data-aos="fade-up duration-300">
+        <div class="grid md:grid-cols-2 lg:grid-cols-4  px-[150px] p-[100px] w-[100%] mx-auto gap-[10px] text-center" data-aos="fade-up duration-300">
 
             <div class="group">
                 <i class="fa-solid fa-users text-[50px] text-white pb-8 group-hover:text-red-400"></i>
