--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
 
 <body>
     <header class="shadow-lg sticky z-50 top-0 bg-white">
-        <nav class="flex flex-row gap-[40px] text-center justify-between w-[90%] mx-auto">
+        <nav class="flex flex-row gap-[40px] text-center justify-between items-center w-[90%] mx-auto">
             <div class="p-[25px] pl-[60px] text-[30px] text-[navy] font-bold"><a href="">ALV</a><span
                     class="text-[30px] text-red-700 font-bold">N</span></div>
             <div
