--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@
 
     <div class="h-[350px] w-full bg-[#1A1A2E]">
 
-        <div class="grid grid-cols-4 gap-[60px] w-[85%] mx-auto pt-[60px]">
+        <div class="sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 pb-6 md:pb-4 lg:pb-2 sm:gap-[20px] md:gap-[30px] lg-gap[40px] gap-[60px] w-[85%] mx-auto pt-[60px]">
             <div>
                 <h2 class="text-white text-[25px] text-start pb-2 font-bold">About ALVN</h2>
                 <p class="text-[#C4C4C4] text-md text-start">ALVN Education Consultancy is your trusted partner for
